fixed react component bug

--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,10 @@
 
 <div id="mapholder">
 </div>
-<div id="content">
+<div id="main">
 </div>
 
-<script type="text/javascript" src='map.js'></script>
+<!--script type="text/javascript" src='map.js'></script-->
 <script type="text/babel" src='app.js'></script>
 </body>
 </html>
