--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
-</head>
+    <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet' type='text/css'>
 <body>
 
 <div id="mapholder">
 </div>
 <div id="main">
 </div>
+
 
 <!--script type="text/javascript" src='map.js'></script-->
 <script type="text/babel" src='app.js'></script>
